--- a/userviewpc/index.html
+++ b/userviewpc/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="/static/logo/logo.jpg" type="image/x-icon">
     <title>whitehole</title>
   </head>
+  <script type="text/javascript" src="./static/live2dw/lib/L2Dwidget.min.js"></script>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
